...
            animationType="slide"
            presentationStyle="pageSheet"
            onRequestClose={onClose}
        >
            <View style={[styles.container, { backgroundColor: colors.background }]}>
                <View style={styles.header}>
                    <TouchableOpacity onPress={onClose} style={styles.backButton} testID="back-button">
                        <Feather name="chevron-left" size={30} color={colors.text} />
                    </TouchableOpacity>
                    <Text style={[styles.headerTitle, { color: colors.text }]}>{game.sportName.toUpperCase()}</Text>
                    <View style={{ width: 30 }} />
                </View>

...
                        onPress={handleJoinLeave}
                        disabled={isActionLoading}
                    >
                        {isActionLoading ? (
                            <ActivityIndicator color="white" />
                        ) : (
                            <Text style={styles.actionButtonText}>{hasJoined ? "LEAVE" : "JOIN"}</Text>
                        )}
                    </TouchableOpacity>
                </View>
            </View>
        </Modal>
    );
...
